# Network-Traffic-Sentinel

./: .gitignore  DESIGN.md  PROJECT_BACKLOG.md  README.md  RELEASE_NOTES.md  SIGN_OFF.md  TEST_REPORT.md  USER_GUIDE.md  index.html  package-lock.json  package.json  start_service.bat  stop_service.bat  vite.config.ts
.codex/environments/: environment.toml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/geoip/: country-ranges.csv
src-tauri/src/: collector.rs  commands.rs  db.rs  geo.rs  main.rs  models.rs
src/lib/: api.ts  format.ts  mock.ts
